--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
-  </head>
-  <body>
+    <meta name="description" content="Frontend Programming Challenge for Chess.com">
+    <meta name="author" content="Chess.com">
+    <meta name="version" content="1.0.0">
+    <meta name="license" content="MIT">
+    <title>Chess.com Frontend Challenge</title>
+</head>
+<body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
-  </body>
+</body>
 </html>
